# goit_personal_assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  test.py  test_2.py  test_3.py  test_cloudinary.py  test_date.py  test_models.py  test_random.py  test_url.py  test_uuid.py
accounts/: admin.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_avatar.py
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_email.py  0003_alter_phonenumber_phone_number.py  0004_contact_address.py  0005_alter_phonenumber_phone_number.py  0006_targetdateinterval.py  0007_alter_targetdateinterval_interval.py  0008_targetdateinterval_owner.py  0009_delete_targetdateinterval.py  0010_contact_dob_dayofyear_internal_alter_contact_dob.py  0011_dobinterval.py  0012_delete_dobinterval.py
django_project/: settings.py  urls.py
files/: forms.py  models.py  urls.py  views.py
files/migrations/: 0001_initial.py  0002_alter_userfile_file.py
news/: forms.py  urls.py  views.py
notes/: forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_remove_tag_tag_of_username_remove_tag_owner.py  0003_alter_note_description_alter_tag_name.py  0003_alter_tag_name.py  0004_alter_note_description.py  0004_tag_owner.py
pages/: tests.py
scripts/: populate_data.py  populate_notes.py  seed_data.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.css
templates/: base.html  coming_birthday.html  contact_delete.html  contact_detail.html  contact_edit.html  contact_list.html  contact_new.html  dob_list.html  file_list.html  home.html  news.html  rates.html  search_list.html  weather.html
templates/contacts/: contact_delete.html  contact_list.html  contact_new.html  search_list.html
templates/files/: download_file.html  file_list.html  file_upload.html
templates/news/: news.html
templates/notes/: note_confirm_delete.html  note_detail.html  note_form.html  note_list.html  tag_form.html  tag_list.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
templates/uploader/: upload_file.html
uploader/: forms.py  models.py  urls.py  views.py
uploader/migrations/: 0001_initial.py  0002_file_extension.py  0003_uploadedfile.py  0004_uploadedfile_is_deleted_alter_uploadedfile_file.py  0005_delete_uploadedfile.py  0006_alter_file_category.py
