[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
environs = "^9.5.0"
psycopg2-binary = "^2.9.9"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
pillow = "^10.1.0"
faker = "^20.0.0"
transliterate = "^1.10.2"
django-birthday = "^0.1.4"
dj-database-url = "^2.1.0"
dj-email-url = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
