[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
environs = "^9.5.0"
psycopg2-binary = "^2.9.9"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
pillow = "^10.1.0"
faker = "^20.0.0"
transliterate = "^1.10.2"
django-birthday = "^0.1.4"
dj-database-url = "^2.1.0"
dj-email-url = "^1.0.6"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
python-dotenv = "^1.0.0"
django-cache-url = "^3.4.4"
marshmallow = "^3.20.1"
mypy-extensions = "^1.0.0"
packaging = "^23.2"
pathspec = "^0.11.2"
platformdirs = "^4.0.0"
sqlparse = "^0.4.4"
typing-extensions = "^4.8.0"
django-environ = "^0.11.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.2.0"}
bs4 = "^0.0.1"
lxml = "^4.9.3"
cloudinary = "^1.36.0"
django-cloudinary-storage = "^0.3.0"
django-gravatar = "^0.1.0"
django-gravatar2 = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
